fix shared-menu-list box-shadow overlap

--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -79,9 +79,10 @@ $--note-actions-icon-width: 24px;
   display: none;
   position: absolute;
   z-index: 1;
-  right: 0;
+  right: 3px;
   top: 34px;
   width: 150px;
+  margin-bottom: 10px;
   @extend %box-style;
   &.show {
     display: block;
